--- a/master/Makefile
+++ b/master/Makefile
@@ -14,3 +14,10 @@ build: build_dev
 	/bin/sh -c "mix deps.get && mix deps.compile && mix release --env=prod --verbose"
 
 	docker build -f app.Dockerfile -t vjftw/velocity:master-${GIT_VERSION} -t vjftw/velocity:master .
+
+test:
+
+	docker-compose -f docker-compose.test.yml stop
+	docker-compose -f docker-compose.test.yml rm --force
+	docker-compose -f docker-compose.test.yml up --abort-on-container-exit
+	docker-compose -f docker-compose.test.yml rm --force
