--- a/web/velocity/package.json
+++ b/web/velocity/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "angular2-materialize": "^15.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.2",
+    "bootstrap": "4.0.0-beta",
     "core-js": "^2.4.1",
-    "materialize-css": "^0.99.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
