Migrated to velocity-ci organisation

--- a/master/Makefile
+++ b/master/Makefile
@@ -2,8 +2,8 @@ GIT_VERSION = $(shell git describe --always)
 
 update:
 	docker run --rm \
-	--volume ${CURDIR}:/go/src/github.com/VJftw/velocity/master/ \
-	--workdir /go/src/github.com/VJftw/velocity/master/velocity \
+	--volume ${CURDIR}:/go/src/github.com/velocity-ci/velocity/master/ \
+	--workdir /go/src/github.com/velocity-ci/velocity/master/velocity \
  	--env CGO_ENABLED=0 \
  	--env GOOS=linux \
 	golang \
@@ -11,8 +11,8 @@ update:
 
 install:
 	docker run --rm \
-	--volume ${CURDIR}:/go/src/github.com/VJftw/velocity/master/ \
-	--workdir /go/src/github.com/VJftw/velocity/master/velocity \
+	--volume ${CURDIR}:/go/src/github.com/velocity-ci/velocity/master/ \
+	--workdir /go/src/github.com/velocity-ci/velocity/master/velocity \
  	--env CGO_ENABLED=0 \
  	--env GOOS=linux \
 	golang \
@@ -20,34 +20,34 @@ install:
 
 build: install
 	docker run --rm \
-	--volume ${CURDIR}:/go/src/github.com/VJftw/velocity/master/ \
-	--workdir /go/src/github.com/VJftw/velocity/master/velocity \
+	--volume ${CURDIR}:/go/src/github.com/velocity-ci/velocity/master/ \
+	--workdir /go/src/github.com/velocity-ci/velocity/master/velocity \
  	--env CGO_ENABLED=0 \
  	--env GOOS=linux \
 	golang \
 	/bin/sh -c "go build -a -installsuffix cgo -o dist/velocity"
 
-	docker build -t vjftw/velocity:master-${GIT_VERSION} .
-	docker tag vjftw/velocity:master-${GIT_VERSION} vjftw/velocity:master-latest
+	docker build -t velocity-ci/velocity:master-${GIT_VERSION} .
+	docker tag velocity-ci/velocity:master-${GIT_VERSION} velocity-ci/velocity:master-latest
 
 build-dev:
-	docker build -t vjftw/velocity:master-dev -f dev.Dockerfile .
+	docker build -t velocity-ci/velocity:master-dev -f dev.Dockerfile .
 
 test: build-dev install
 	$(eval NOVENDOR=$(shell docker run --rm \
-	--volume ${CURDIR}:/go/src/github.com/VJftw/velocity/master/ \
-	--workdir /go/src/github.com/VJftw/velocity/master/velocity \
-	vjftw/velocity:master-dev \
+	--volume ${CURDIR}:/go/src/github.com/velocity-ci/velocity/master/ \
+	--workdir /go/src/github.com/velocity-ci/velocity/master/velocity \
+	velocity-ci/velocity:master-dev \
 	glide novendor))
 
 	docker run --rm \
-	--volume ${CURDIR}:/go/src/github.com/VJftw/velocity/master/ \
-	--workdir /go/src/github.com/VJftw/velocity/master/velocity \
-	vjftw/velocity:master-dev \
+	--volume ${CURDIR}:/go/src/github.com/velocity-ci/velocity/master/ \
+	--workdir /go/src/github.com/velocity-ci/velocity/master/velocity \
+	velocity-ci/velocity:master-dev \
 	go test -v -cover ${NOVENDOR}
 
 	docker run --rm \
-    	--volume ${CURDIR}:/go/src/github.com/VJftw/velocity/master/ \
-    	--workdir /go/src/github.com/VJftw/velocity/master/velocity \
-    	vjftw/velocity:master-dev \
+    	--volume ${CURDIR}:/go/src/github.com/velocity-ci/velocity/master/ \
+    	--workdir /go/src/github.com/velocity-ci/velocity/master/velocity \
+    	velocity-ci/velocity:master-dev \
     	golint -set_exit_status ${NOVENDOR}
