--- a/cli/velocity/glide.yaml
+++ b/cli/velocity/glide.yaml
@@ -1,6 +1,6 @@
-package: github.com/VJftw/velocity/cli/velocity
+package: github.com/velocity-ci/velocity/cli/velocity
 import:
-- package: github.com/VJftw/velocity
+- package: github.com/velocity-ci/velocity
   subpackages:
   - master/velocity/domain
   - master/velocity/domain/project/task
