--- a/cli/velocity/glide.yaml
+++ b/cli/velocity/glide.yaml
@@ -1,5 +1,5 @@
 package: github.com/velocity-ci/velocity/cli/velocity
-# import:
+import:
 # - package: github.com/velocity-ci/velocity
 #   subpackages:
 #   - master/velocity/domain
