--- a/master/velocity/glide.yaml
+++ b/master/velocity/glide.yaml
@@ -15,3 +15,10 @@ import:
   version: ^1.1.0
 - package: github.com/satori/go.uuid
   version: ^1.1.0
+- package: github.com/docker/docker
+  version: 184cea5ff710abde25547749e5608b24a255ba09
+  subpackages:
+  - client
+  - pkg/tlsconfig
+  - builder/remotecontext/git
+- package: github.com/docker/cli
