--- a/cli/velocity/glide.yaml
+++ b/cli/velocity/glide.yaml
@@ -5,7 +5,8 @@ import:
 #   - master/velocity/domain
 #   - master/velocity/domain/project/task
 - package: github.com/docker/docker
-  version: ^17.5.0-ce-rc3
+  version: 184cea5ff710abde25547749e5608b24a255ba09
   subpackages:
   - client
   - pkg/tlsconfig
+  - builder/remotecontext/git
