--- a/cli/velocity/tasks/test.yml
+++ b/cli/velocity/tasks/test.yml
@@ -43,3 +43,19 @@ steps:
     image: library/alpine
     type: run
     mount_point: /app
+
+  - type: plugin
+    image: velocity/aws-push
+    dind: true
+    environment:
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      IMAGES: "vjftw/alpine:latest,vjftw/alpine:abc"
+  
+  - type: plugin
+    image: velocity/docker-push
+    dind: true
+    environment:
+      USERNAME: ${USERNAME}
+      PASSWORD: ${PASSWORD}
+      IMAGES: "vjftw/alpine:latest,vjftw/alpine:abc"
