[cli] Working via docker image and sibling containers

--- a/tasks/build-master.yml
+++ b/tasks/build-master.yml
@@ -20,6 +20,9 @@ steps:
     image: golang
     mount_point: /go/src/github.com/velocity-ci/velocity/
     working_dir: master/velocity
+    environment:
+      GOOS: linux
+      CGO_ENABLED: 0
     command: ["go", "build", "-a", "-installsuffix", "cgo", "-o", "dist/velocity"]
 
   - type: build
