--- a/web/velocity/tsconfig.json
+++ b/web/velocity/tsconfig.json
@@ -1,19 +1,16 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
     "target": "es5",
+    // types option has been previously configured
+    "types": [
+      // add node as an option
+      "node"
+    ],
+    // typeRoots option has been previously configured
     "typeRoots": [
+      // add path to @types
       "node_modules/@types"
     ],
-    "lib": [
-      "es2017",
-      "dom"
-    ]
+    "allowJs": false
   }
 }
