[api] WIP: Added management for SSH Known Hosts with custom validator. Need to output validation errors better and try authenticating with go git lib

--- a/master/docker-compose.yml
+++ b/master/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     build:
       context: .
       dockerfile: dev.Dockerfile
-    command: /bin/start_dev.sh
+    command: /bin/sh -c "eval `ssh-agent` && fresh"
     restart: unless-stopped
     volumes:
       - "./:/go/src/github.com/velocity-ci/velocity/master/"
