--- a/web/velocity/package.json
+++ b/web/velocity/package.json
@@ -5,6 +5,7 @@
     "css-loader": "^0.28.7",
     "elm": "^0.18.0",
     "elm-hot-loader": "^0.5.4",
+    "elm-test": "^0.18.9",
     "elm-webpack-loader": "^4.3.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
@@ -18,6 +19,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "bootstrap": "4.0.0-beta"
+    "bootstrap": "4.0.0-beta",
+    "global": "^4.3.2"
   }
 }
