--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -14,5 +14,23 @@ services:
     environment:
       JWT_SECRET: development
       PORT: 80
+      SLAVE_SECRET: development
     ports:
       - "80:80"
+
+  slave:
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    command: /bin/sh -c "eval `ssh-agent` && exec fresh"
+    restart: unless-stopped
+    volumes:
+      - "./:/go/src/github.com/velocity-ci/velocity/backend/"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "/opt/velocity/:/opt/velocity/"
+    working_dir: /go/src/github.com/velocity-ci/velocity/backend/slave
+    links:
+      - "api:api"
+    environment:
+      MASTER_ADDRESS: http://api
+      SLAVE_SECRET: development
