--- a/tasks/build-api.yml
+++ b/tasks/build-api.yml
@@ -1,6 +1,9 @@
 description: "Builds API"
 name: build-api
 steps: 
+  - type: clone
+    submodule: false
+    
   - type: build
     description: Build development image
     dockerfile: dev.Dockerfile
