--- a/tasks/build-cli.yml
+++ b/tasks/build-cli.yml
@@ -1,6 +1,9 @@
 description: "Builds CLI"
 name: build-cli
 steps: 
+  - type: clone
+    submodule: false
+
   - type: build
     description: Build development image
     dockerfile: dev.Dockerfile
