--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     restart: unless-stopped
     volumes:
       - "./:/go/src/github.com/velocity-ci/velocity/backend/"
+      - "/tmp/velocity-workspace/logs:/tmp/velocity-workspace/logs"
     working_dir: /go/src/github.com/velocity-ci/velocity/backend/api
     environment:
       JWT_SECRET: development
@@ -19,19 +20,19 @@ services:
     ports:
       - "80:80"
 
-  # slave:
-  #   build:
-  #     context: .
-  #     dockerfile: dev.Dockerfile
-  #   command: /bin/sh -c "eval `ssh-agent` && exec fresh"
-  #   restart: unless-stopped
-  #   volumes:
-  #     - "./:/go/src/github.com/velocity-ci/velocity/backend/"
-  #     - "/var/run/docker.sock:/var/run/docker.sock"
-  #     - "/tmp/velocity-workspace/:/tmp/velocity-workspace/"
-  #   working_dir: /go/src/github.com/velocity-ci/velocity/backend/slave
-  #   links:
-  #     - "api:api"
-  #   environment:
-  #     MASTER_ADDRESS: http://api
-  #     SLAVE_SECRET: development
+  slave:
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    command: /bin/sh -c "eval `ssh-agent` && exec fresh"
+    restart: unless-stopped
+    volumes:
+      - "./:/go/src/github.com/velocity-ci/velocity/backend/"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "/tmp/velocity-workspace/:/tmp/velocity-workspace/"
+    working_dir: /go/src/github.com/velocity-ci/velocity/backend/slave
+    links:
+      - "api:api"
+    environment:
+      MASTER_ADDRESS: http://api
+      SLAVE_SECRET: development
