[backend] Added initial Swagger JSON with UI in docker-compose.

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,6 +2,15 @@ version: '3'
 
 services:
 
+  swagger:
+    image: swaggerapi/swagger-ui
+    volumes:
+      - "./api/swagger.json:/swagger.json"
+    environment:
+      SWAGGER_JSON: /swagger.json
+    ports:
+      - "8080:8080"
+
   api:
     build:
       context: .
