--- a/tasks/example-task.yml
+++ b/tasks/example-task.yml
@@ -7,3 +7,6 @@ steps:
   - type: run
     description: Hello Docker
     image: hello-world:latest
+
+  - type: docker-compose
+    composeFile: backend/docker-compose.test.yml
