Working volume binds for docker-compose

--- a/backend/docker-compose.test.yml
+++ b/backend/docker-compose.test.yml
@@ -3,7 +3,10 @@ version: '3'
 services:
 
   a:
-    image: hello-world
+    image: busybox
+    command: ls -al /app
+    volumes:
+      - "../:/app"
 
   b:
     image: hello-world
