[backend] Fixed volume refactor. Working links. Next up should probably be network alias

--- a/backend/docker-compose.test.yml
+++ b/backend/docker-compose.test.yml
@@ -4,9 +4,12 @@ services:
 
   a:
     image: busybox
-    command: ls -al /app
+    command: ping -c 3 b
     volumes:
-      - "../:/app"
+      - "./:/app"
+    links:
+      - "b"
 
   b:
-    image: hello-world
+    image: busybox
+    command: sleep 10s
