[backend] Propose removing clone step as it will always be done anyway (CLI does not clone)

--- a/backend/velocity/example-task.yaml
+++ b/backend/velocity/example-task.yaml
@@ -1,6 +1,12 @@
 name: Deploy
 description: Deploys application to given environment
 
+## Remove clone step, emit a workspace setup/prep stage 
+# that clones repository and resolves parameters
+git: 
+  submodule: false
+
+## Parameters are mixed
 parameters: 
   - name: environment
     default: testing
