[backend] WIP: big task, parameters refactor to make way for derived parameters. Need to parse task YAML into interfaces correctly.

--- a/tasks/example-task.yml
+++ b/tasks/example-task.yml
@@ -1,5 +1,11 @@
 description: "Hello Velocity"
 name: hello-velocity
+
+parameters:
+  - use: civelocity/aws-credentials
+    arguments:
+      roleName: testRole
+
 steps: 
   - type: clone
     submodule: false
