--- a/backend/velocity/example-task.yaml
+++ b/backend/velocity/example-task.yaml
@@ -6,7 +6,7 @@ description: Deploys application to given environment
 git: 
   submodule: false
 
-## Parameters are mixed
+## Parameters are mixed and get resolved on task run.
 parameters: 
   - name: environment
     default: testing
@@ -22,6 +22,9 @@ parameters:
   # Haved default exports to keep DRY
   # * Default to secret, but can be not secret.
   - use: civelocity/aws-credentials # by default, export AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY
+    arguments:
+      roleName: testRole
+  # If container fails during task setup, attempt to get exports (from container) from environment.
   - use: civelocity/s3-credentials
     secret: true
     arguments:
