[backend] Added docker build step

--- a/tasks/example-task-2.yaml
+++ b/tasks/example-task-2.yaml
@@ -58,7 +58,7 @@ steps:
 
   - type: compose
     name: Run tests
-    compose-file: docker-compose.test.yml
+    composeFile: docker-compose.test.yml
 
   - type: build
     name: Build release image
