--- a/backend/velocity/example-task.yaml
+++ b/backend/velocity/example-task.yaml
@@ -39,8 +39,11 @@ parameters:
 docker: 
   registries:
     # AWS ECR
-    - address: xxxxxxxx.dkr.ecr.eu-west-1.amazonaws.com
-      use: civelocity/ecr-login
+    - address: xxxxxx.dkr.ecr.eu-west-1.amazonaws.com
+      use: civelocity/auth-aws-ecr
+      arguments:
+        AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+        AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
     # Random private
     - address: mydockerregistry.com
       use: civelocity/docker-login
